okay I kinda got the lines in but now I need to fix img spacing

--- a/my-podbox/src/app/main-pages/login/page.module.css
+++ b/my-podbox/src/app/main-pages/login/page.module.css
@@ -7,10 +7,13 @@
     justify-content: center;
     padding: 0;
     min-height: 100vh;
-    min-width: 100vw;
     font-family: Poppins, sans-serif;
     text-align: center;
   }
+
+.mainPane {
+  min-width: 100vw;
+}
   
 
 .main h1 {
@@ -57,13 +60,13 @@
   font-weight: normal;
   margin-top: 3em;
   margin-left: 1em;
-  margin-bottom: 1em;
+  margin-right: 1em;
   
 }
 
 .divider {
   display: inline-block;
-  width: 60%; /* Adjust as needed */
+  width: 25%; /* Adjust as needed */
   border-top: 1px solid #C5C7D0; /* Line color */
   margin-top: 10px; /* Adjust spacing */
   margin-bottom: 10px; /* Adjust spacing */
